--- a/applications/ansible-tower/group_vars/ansible-tower/config.organization.credentials.yml
+++ b/applications/ansible-tower/group_vars/ansible-tower/config.organization.credentials.yml
@@ -52,6 +52,34 @@ ansible_tower_config:
           password: "changeme"
           ssh_key_data: "~/.ansible/vault/ssh/default"
 
+        - name: "network-panos-ssh"
+          kind: "ssh"
+          description: "Credential for panos"
+          username: "changeme"
+          password: "changeme"
+          ssh_key_data: "~/.ansible/vault/ssh/default"
+
+        - name: "network-panos-net"
+          kind: "net"
+          description: "Credential for panos"
+          username: "changeme"
+          password: "changeme"
+          ssh_key_data: "~/.ansible/vault/ssh/default"
+
+        - name: "network-tmos-ssh"
+          kind: "ssh"
+          description: "Credential for tmos"
+          username: "changeme"
+          password: "changeme"
+          ssh_key_data: "~/.ansible/vault/ssh/default"
+
+        - name: "network-tmos-net"
+          kind: "net"
+          description: "Credential for tmos"
+          username: "changeme"
+          password: "changeme"
+          ssh_key_data: "~/.ansible/vault/ssh/default"
+
 ###############################
 #### SYSTEM
 ###############################
