--- a/applications/darkbulb-ios/deploy.yml
+++ b/applications/darkbulb-ios/deploy.yml
@@ -1,22 +1,2 @@
-- name: "Deploy Darkbulb for IOS"
-  hosts: darkbulb-ios
-  become: true
-  tasks:
-    - name: "victorock.darkbulb"
-      include_role:
-        name: "victorock.darkbulb"
-        tasks_from: run
-
-- name: "Deploy Darkbulb Topology"
-  hosts: darkbulb_topology
-  become: true
-  # Hack to avoid race-condition when running multi-node topology in a single host
-  # Avoids race-condition in libvirt when setting up common resources
-  serial:
-  - 1
-
-  tasks:
-    - name: "victorock.darkbulb-topology"
-      include_role:
-        name: "victorock.darkbulb-topology"
-        tasks_from: run
+- include: deploy.darkbulb.yml
+- include: deploy.topology.yml
