--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -14,6 +14,26 @@
 
 - name: victorock.security
 
+- src: https://github.com/victorock/ansible-role-download.git
+  scm: git
+  version: dev
+  name: victorock.download
+
+- src: https://github.com/victorock/ansible-role-libvirt.git
+  scm: git
+  version: dev
+  name: victorock.libvirt
+
+- src: https://github.com/victorock/ansible-role-gns3-server.git
+  scm: git
+  version: dev
+  name: victorock.gns3_server
+
+- src: https://github.com/victorock/ansible-role-cockpit.git
+  scm: git
+  version: dev
+  name: victorock.cockpit
+
 - src: https://github.com/victorock/ansible-role-awx.git
   scm: git
   version: victorock-galaxy-dependencies
