--- a/applications/darkbulb-nxos/deploy.yml
+++ b/applications/darkbulb-nxos/deploy.yml
@@ -1,19 +1,2 @@
-- name: "Deploy Darkbulb for NXOS"
-  hosts: darkbulb-nxos
-  become: true
-
-  tasks:
-    - name: "victorock.darkbulb"
-      include_role:
-        name: "victorock.darkbulb"
-        tasks_from: run
-
-- name: "Deploy Darkbulb Topology"
-  hosts: darkbulb_topology
-  become: true
-
-  tasks:
-    - name: "victorock.darkbulb-topology"
-      include_role:
-        name: "victorock.darkbulb-topology"
-        tasks_from: run
+- include: deploy.darkbulb.yml
+- include: deploy.topology.yml
