--- a/applications/darkbulb-nxos/group_vars/darkbulb/darkbulb.yml
+++ b/applications/darkbulb-nxos/group_vars/darkbulb/darkbulb.yml
@@ -3,5 +3,6 @@ darkbulb_homedir:     "/home/darkbulb"
 darkbulb_ansible:     "yes"
 darkbulb_cockpit:     "yes"
 darkbulb_libvirt:     "yes"
+darkbulb_gns3_server: "no"
 darkbulb_vagrant:     "no"
 darkbulb_virtualbox:  "no"
