--- a/applications/awx/ansible.cfg
+++ b/applications/awx/ansible.cfg
@@ -5,6 +5,8 @@ hash_behaviour = merge
 callback_whitelist = profile_tasks
 roles_path = roles/
 inventory = inventory
+stdout_callback = yaml
+bin_ansible_callbacks = True
 
 [persistent_connection]
 command_timeout=1000
