--- a/applications/darkbulb-nxos/deploy.topology.yml
+++ b/applications/darkbulb-nxos/deploy.topology.yml
@@ -2,13 +2,6 @@
   hosts: darkbulb_topology
   become: true
 
-  tasks:
-    - name: "victorock.gce_config"
-      include_role:
-        name: "victorock.gce_config"
-        tasks_from: "storage.bucket.yml"
-
-    - name: "victorock.darkbulb-topology"
-      include_role:
-        name: "victorock.darkbulb-topology"
-        tasks_from: run
+  roles:
+    - role: "victorock.darkbulb_topology"
+      autorun: true
